- Select games' data can now be preloaded allowing an extended Mod Menu+.

Crash Nitro Kart
- Mod Menu+ enabled (All)
- Mod Menu: More understandable names and descriptions

Crash Twinsanity
- Mod Menu+ enabled (PS2)
- New feature: Classic Health
- New feature: Classic Explosion Damage
- New feature: Unlocked Camera Everywhere
- New feature: Untextured World
- New feature: Greyscale World (PS2)
- Mod Menu: More understandable names and descriptions
- Fixed default values for character health.
- Randomize Character Parameters: No longer changes jump parameteres.

Crash Tag Team Racing
- Randomize Race Laps: Rings of Uranus now randomized between 3 and 12 laps.

Rayman 3: Hoodlum Havoc
- Mod Menu+ enabled (GCN)
- New feature: Randomize Sub-Level Order
- New feature: Randomize Outfit Colors (GCN)
- New feature: Randomize Copter Colors (GCN)
- New feature: Randomize HUD Colors (GCN)

Crash Bandicoot
- New feature: Randomize Wooden Crates
- New feature: Random Enemies Removed
- New feature: All Enemies Removed
- Backwards Hog Levels: Removed checkpoints since they didn't work anyway.

Crash Bandicoot 2: Cortex Strikes Back
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed
- New feature: Randomize Crate Parameters
- New feature: Random Enemies Removed
- New feature: All Enemies Removed
- New feature: Random Enemies Are Random Crates
- New feature: All Enemies Are Random Crates
- New feature: Randomize Enemy Paths
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Swizzle Object Palette
- New feature: Greyscale Objects
- New feature: Randomize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.

Crash Bandicoot: WARPED
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed