@@ -654,5 +654,180 @@ namespace CrateModLoader.GameSpecific.CrashTS
             }
         }
 
+        public static List<DefaultEnums.SurfaceTypes> SurfacesToChange = new List<DefaultEnums.SurfaceTypes>()
+        {
+            DefaultEnums.SurfaceTypes.SURF_DEFAULT,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_MEDIUM_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_MEDIUM_SLIPPY_RIGID_ONLY,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_SLIGHTLY_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_ICE,
+            DefaultEnums.SurfaceTypes.SURF_ICE_LOW_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_GRASS,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_METAL,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_MUD,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_ROCK,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_SAND,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_SNOW,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_STONE_TILES,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_WOOD,
+            DefaultEnums.SurfaceTypes.SURF_SLIPPY_METAL,
+            DefaultEnums.SurfaceTypes.SURF_SLIPPY_ROCK,
+            //DefaultEnums.SurfaceTypes.SURF_STICKY_SNOW,
+        };
+
+        public static List<DefaultEnums.SurfaceTypes> SurfacesToPlace = new List<DefaultEnums.SurfaceTypes>()
+        {
+            DefaultEnums.SurfaceTypes.SURF_DEFAULT,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_MEDIUM_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_MEDIUM_SLIPPY_RIGID_ONLY,
+            DefaultEnums.SurfaceTypes.SURF_GENERIC_SLIGHTLY_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_ICE,
+            DefaultEnums.SurfaceTypes.SURF_ICE_LOW_SLIPPY,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_GRASS,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_METAL,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_MUD,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_ROCK,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_SAND,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_SNOW,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_STONE_TILES,
+            DefaultEnums.SurfaceTypes.SURF_NORMAL_WOOD,
+            DefaultEnums.SurfaceTypes.SURF_SLIPPY_METAL,
+            DefaultEnums.SurfaceTypes.SURF_SLIPPY_ROCK,
+            //DefaultEnums.SurfaceTypes.SURF_STICKY_SNOW,
+        };
+
+        public static void RM_Randomize_Surfaces(TwinsFile RM_Archive, Dictionary<int, int> randList)
+        {
+
+            if (!RM_Archive.ContainsItem(9)) return;
+            TwinsItem section = RM_Archive.GetItem<TwinsItem>(9);
+            ColData colData = (ColData)section;
+
+            for (int i = 0; i < colData.Tris.Count; i++)
+            {
+                if (randList.ContainsKey(colData.Tris[i].Surface))
+                {
+                    colData.Tris[i] = new ColData.ColTri()
+                    {
+                        Surface = randList[colData.Tris[i].Surface],
+                        Vert1 = colData.Tris[i].Vert1,
+                        Vert2 = colData.Tris[i].Vert2,
+                        Vert3 = colData.Tris[i].Vert3,
+                    };
+                }
+            }
+
+        }
+
+        public static List<ObjectID> CratesForWumpaToTurnInto = new List<ObjectID>()
+        {
+            ObjectID.AKUAKUCRATE,
+            ObjectID.BASICCRATE,
+            ObjectID.EXTRALIFECRATE,
+            ObjectID.MULTIPLEHITCRATE,
+            ObjectID.NITROCRATE,
+            ObjectID.SURPRISECRATE,
+            ObjectID.TNTCRATE,
+            ObjectID.WOODENSPRINGCRATE,
+        };
+
+        public static void RM_WumpaIntoRandomCrates(TwinsFile RM_Archive, ChunkType chunkType, ref Random randState, bool isRandom)
+        {
+            List<uint> lifecrates = new List<uint>
+            {
+                (uint)ObjectID.EXTRALIFECRATE,
+                (uint)ObjectID.EXTRALIFECRATECORTEX,
+                (uint)ObjectID.EXTRALIFECRATENINA
+            };
+            randState = new Random((ModLoaderGlobals.RandomizerSeed + (int)chunkType) % int.MaxValue);
+            for (uint section_id = (uint)RM_Sections.Instances1; section_id <= (uint)RM_Sections.Instances8; section_id++)
+            {
+                if (!RM_Archive.ContainsItem(section_id)) continue;
+                TwinsSection section = RM_Archive.GetItem<TwinsSection>(section_id);
+                if (section.Records.Count > 0)
+                {
+                    if (!section.ContainsItem((uint)RM_Instance_Sections.ObjectInstance)) continue;
+                    TwinsSection instances = section.GetItem<TwinsSection>((uint)RM_Instance_Sections.ObjectInstance);
+                    for (int i = 0; i < instances.Records.Count; ++i)
+                    {
+                        Instance instance = (Instance)instances.Records[i];
+
+                        if (instance.ObjectID == (ushort)ObjectID.REDWUMPA)
+                        {
+                            if (!isRandom || (isRandom && randState.Next(2) == 0))
+                            {
+                                int target_item = randState.Next(0, CratesForWumpaToTurnInto.Count);
+                                if (CratesForWumpaToTurnInto[target_item] == ObjectID.EXTRALIFECRATE)
+                                {
+                                    int target_life = randState.Next(0, lifecrates.Count);
+                                    target_item = (int)lifecrates[target_life];
+                                }
+                                else
+                                {
+                                    target_item = (int)CratesForWumpaToTurnInto[target_item];
+                                }
+
+                                instance.UnkI322 = new List<float>() { 1, 50, 0 };
+
+                                if (target_item == (int)ObjectID.AMMOCRATESMALL)
+                                {
+                                    instance.Flags = 0x4011E;
+                                    instance.UnkI322 = new List<float>() { 1, 50, 10 };
+                                }
+                                else if (target_item == (int)ObjectID.BASICCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.EXTRALIFECRATE || target_item == (int)ObjectID.EXTRALIFECRATECORTEX || target_item == (int)ObjectID.EXTRALIFECRATENINA)
+                                {
+                                    instance.Flags = 0x81DE;
+                                }
+                                else if (target_item == (int)ObjectID.WOODENSPRINGCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.REINFORCEDWOODENCRATE)
+                                {
+                                    instance.Flags = 0xD91E;
+                                }
+                                else if (target_item == (int)ObjectID.AKUAKUCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.IRONCRATE)
+                                {
+                                    instance.Flags = 0x7D1E;
+                                }
+                                else if (target_item == (int)ObjectID.IRONSPRINGCRATE)
+                                {
+                                    instance.Flags = 0x7D1E;
+                                }
+                                else if (target_item == (int)ObjectID.MULTIPLEHITCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.SURPRISECRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.TNTCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+                                else if (target_item == (int)ObjectID.NITROCRATE)
+                                {
+                                    instance.Flags = 0x811E;
+                                }
+
+                                instance.ObjectID = (ushort)target_item;
+                            }
+                        }
+
+                        instances.Records[i] = instance;
+                    }
+                }
+            }
+        }
+
     }
 }
